--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@ h3 {
 </head>    
 <body>
     <div id="content">
-        <h1>Sarah Gothard</h1>
-        <h2>Freshman in Greenville, South Carolina</h2>
+        <h1>Jonathan Millar</h1>
+        <h2>Sophomore in Greenville, South Carolina</h2>
         
-         <p>I am a freshman at Bob Jones University studying computer science with a minor in 
+         <p>I am a sophomore at Bob Jones University studying computer science with a minor in 
             mathematics. I work for the Computer Science department as a lab monitor.</p>
          <p>
             I attend Cornerstone Baptist Church in Greer SC. My favorite website is  
