--- a/index.html
+++ b/index.html
@@ -33,15 +33,14 @@ h3 {
         <h1>Jonathan Millar</h1>
         <h2>Sophomore in Greenville, South Carolina</h2>
         
-         <p>I am a sophomore at Bob Jones University studying computer science with a minor in 
-            mathematics. I work for the Computer Science department as a lab monitor.</p>
+         <p>I am a sophomore at Bob Jones University studying Humanities. I work for the Bob Jones University athletic teams as a ballboy.</p>
          <p>
-            I attend Cornerstone Baptist Church in Greer SC. My favorite website is  
+            I attend Heritage Bible Church in Greer SC. My favorite website is  
             <a href="https://mobilehymns.org/">here</a>, and you can email me  
-            <a href="mailto:sgothard@bju.edu">here</a>.
+            <a href="mailto:jmill711@students.bju.edu">here</a>.
          </p> 
          <p>
-            I enjoy listening to podcasts and having deep conversations.
+            I enjoy playing soccer with my society and going on wild adventures with my roommate.
          </p>
         <h3>EDUCATION</h3>
         Computer Science<br />
