--- a/index.html
+++ b/index.html
@@ -36,17 +36,16 @@ h3 {
          <p>I am a sophomore at Bob Jones University studying Humanities. I work for the Bob Jones University athletic teams as a ballboy.</p>
          <p>
             I attend Heritage Bible Church in Greer SC. My favorite website is  
-            <a href="https://mobilehymns.org/">here</a>, and you can email me  
+            <a href="https://www.youtube.com">here</a>, and you can email me  
             <a href="mailto:jmill711@students.bju.edu">here</a>.
          </p> 
          <p>
             I enjoy playing soccer with my society and going on wild adventures with my roommate.
          </p>
         <h3>EDUCATION</h3>
-        Computer Science<br />
+        Humanities<br />
         Bob Jones University<br />
-        Example image:
-        <img src="https://cs.bju.edu/media/bju-math-division/bju-computer-science/site-assets/images/cs-logo-main.png" />
+        <img src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1659065468i/61769407.jpg" />
     </div>
 </body>
 </html>
