--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ h3 {
         <h3>EDUCATION</h3>
         Humanities<br />
         Bob Jones University<br />
-        <img src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1659065468i/61769407.jpg" />
+        <img src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1659065468i/61769407.jpg" width="200" height="400" />
     </div>
 </body>
 </html>
