--- a/index.html
+++ b/index.html
@@ -1,51 +1,104 @@
+<!DOCTYPE html>
 <html>
+
 <head>
-<style>
-body {
-    background: lightgreen;
-    font-family: Verdana;
-}  
-#content {
-    background: lightyellow;
-    min-width: 200px;
-    max-width: 500px;
-    padding: 50px;
-    margin: auto;
-    margin-top: -50px;
-    line-height: 150%;
-}
-h1 {
-    letter-spacing: 2px;
-    font-size: 16px;
-    text-align: center;
-}
-h2 {
-    font-size: 14px;
-    text-align: center;
-}
-h3 {
-    font-size: 12px;
-}
-</style>
-</head>    
-<body>
-    <div id="content">
-        <h1>Jonathan Millar</h1>
-        <h2>Sophomore in Greenville, South Carolina</h2>
-        
-         <p>I am a sophomore at Bob Jones University studying Humanities. I work for the Bob Jones University athletic teams as a ballboy.</p>
-         <p>
-            I attend Heritage Bible Church in Greer SC. My favorite website is  
-            <a href="https://www.youtube.com">here</a>, and you can email me  
-            <a href="mailto:jmill711@students.bju.edu">here</a>.
-         </p> 
-         <p>
-            I enjoy playing soccer with my society and going on wild adventures with my roommate.
-         </p>
-        <h3>EDUCATION</h3>
-        Humanities<br />
-        Bob Jones University<br />
-        <img src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1659065468i/61769407.jpg" width="200" height="300" />
-    </div>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>Home - Jonathan Millar Self-Publishing</title>
+    <meta name="description" content="This is a website to advertise my books that are currently being sold on Amazon.">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic">
+    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.2.0/aos.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css">
+</head>
+
+<body id="page-top">
+    <nav class="navbar navbar-light navbar-expand-lg fixed-top" id="mainNav">
+        <div class="container"><a class="navbar-brand js-scroll-trigger" href="#page-top">Millar Self-Publishing</a>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="nav navbar-nav ml-auto">
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services">Services</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <header class="masthead text-center text-white d-flex" style="background-image:url('assets/img/header.jpg');">
+        <div class="container my-auto">
+            <div class="row">
+                <div class="col-lg-10 mx-auto">
+                    <h1 class="text-uppercase"><strong>Are you looking for the next best book series?</strong></h1>
+                    <hr>
+                </div>
+            </div>
+            <div class="col-lg-8 mx-auto">
+                <p class="text-faded mb-5">Look no further! The <em>True Identity</em>&nbsp;book series is perfect for those looking for a great teen-oriented Christian fiction action-adventure novel!</p><a class="btn btn-primary active btn-xl js-scroll-trigger" role="button" href="https://www.amazon.com"
+                    style="background: rgb(238,50,50);">Find Out More</a></div>
+        </div>
+    </header>
+    <section id="about" class="bg-primary">
+        <div class="container">
+            <div class="row">
+                <div class="col offset-lg-8 mx-auto text-center">
+                    <h2 class="text-white section-heading">TRUE IDENTITY: THE SHATTERING</h2>
+                    <hr class="light my-4">
+                    <p class="text-faded mb-4">This first book begins the epic saga, telling the story of how Lewis Rodgers lost his parents and went on to find his true identity.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="services">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center" style="height: 200px;">
+                    <h2 class="section-heading">TRUE IDENTITY: THE REBUILDING</h2>
+                    <hr class="my-4">
+                    <p class="text-faded mb-4" style="color: rgba(251,2,2,0.7);">This second book continues Lewis's story as a young YSS agent who has to make a decision that will forever change his life.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="portfolio" class="p-0">
+        <div class="container-fluid p-0">
+            <div class="row no-gutters popup-gallery">
+                <div class="col-sm-6 col-lg-4"><a class="portfolio-box" href="assets/img/fullsize/6.jpg"></a></div>
+            </div>
+        </div>
+    </section>
+    <section class="bg-dark text-white">
+        <div class="container text-center">
+            <h2 class="mb-4">Upcoming Projects!</h2>
+        </div>
+        <p class="text-faded mb-4" style="color: rgba(254,254,255,0.78);text-align: center;">I am currently working on a third book! This next one will be set several years later and will explore even more about Lewis and his ancestry AND his legacy.</p>
+        <p class="text-faded mb-4" style="color: rgba(255,254,254,0.7);text-align: center;">Along with writing this book, I am also in the process of creating a 2nd addition to The Shattering, which will not only lengthen the book, but it will also have more smooth transitions and have more depth.&nbsp;</p>
+    </section>
+    <section id="contact">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 mx-auto text-center">
+                    <h2 class="section-heading">I'd Love to Hear from You!</h2>
+                    <hr class="my-4">
+                    <p class="mb-5">Do you have any comments or ideas for the next sequel? I love to hear feedback, especially from my readers! Feel free to reach out to me via the email below!</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 mr-auto text-center"><i class="fa fa-envelope-o fa-3x mb-3 sr-contact" data-aos="zoom-in" data-aos-duration="300" data-aos-delay="300" data-aos-once="true"></i>
+                    <p><a href="mailto:your-email@your-domain.com">jmill711@students.bju.edu</a></p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/bs-init.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.2.0/aos.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
+    <script src="assets/js/creative.js"></script>
 </body>
+
 </html>
